@@ -4,6 +4,9 @@ import com.example.Makeup.dto.CreateProductDTO;
 import com.example.Makeup.dto.ProductDTO;
 import com.example.Makeup.entity.Product;
 import com.example.Makeup.entity.SubCategory;
+import com.example.Makeup.enums.AppException;
+import com.example.Makeup.enums.ErrorCode;
+import com.example.Makeup.mapper.ProductMapper;
 import com.example.Makeup.repository.ProductRepository;
 import com.example.Makeup.repository.SubCategoryRepository;
 import java.io.File;
@@ -12,9 +15,14 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
+
+import org.hibernate.query.Page;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
@@ -26,43 +34,42 @@ public class ProductService {
     
     @Autowired
     SubCategoryService subCategoryService;
-    
+
+    @Autowired
+    ProductMapper productMapper;
     public ProductDTO findById(int id){
-        Optional<Product> opt = productRepository.findById(id);
-        
-        if (opt.isEmpty()) {
-            return null;
-        }
-        
-        Product product = opt.get();
-        
-        ProductDTO dto = new ProductDTO();
-        dto.setId(product.getId());
-        dto.setNameProduct(product.getNameProduct());
-        dto.setDescribe(product.getDescription());
-        dto.setPrice(product.getPrice());
-        dto.setSize(product.getSize());
-        dto.setStatus(product.isStatus());
-        dto.setSubCategoryId(product.getSubCategory().getId());
-        dto.setImageList(product.getImageList());
-        
-        return dto;
+        Product product = productRepository.findById(id).orElseThrow(() -> new AppException(ErrorCode.PRODUCT_NOT_FOUND));
+        return productMapper.toProductDTO(product);
     }
     
     public List<ProductDTO> getProducts(){
         List<Product> products = productRepository.findAll();
-        return products.stream().map(product -> {
-            ProductDTO pdto = new ProductDTO();
-            pdto.setId(product.getId());
-            pdto.setNameProduct(product.getNameProduct());
-            pdto.setDescribe(product.getDescription());
-            pdto.setPrice(product.getPrice());
-            pdto.setStatus(product.isStatus());
-            pdto.setSize(product.getSize());
-            pdto.setSubCategoryId(product.getSubCategory().getId());
-            pdto.setImageList(product.getImageList());
-            return pdto;
-        }).toList();
+        if (products.isEmpty()) {
+            throw new AppException(ErrorCode.PRODUCT_NOT_FOUND);
+        }
+        return products.stream()
+                    .map(productMapper::toProductDTO)
+                    .collect(Collectors.toList());
+    }
+
+    public List<ProductDTO> getHotProducts() {
+        List<Product> products = productRepository.findTopRentalCount(PageRequest.of(0,12));
+        if (products.isEmpty()) {
+            throw new AppException(ErrorCode.PRODUCT_NOT_FOUND);
+        }
+        return products.stream()
+                .map(productMapper::toProductDTO)
+                .collect(Collectors.toList());
+    }
+
+    public List<ProductDTO> getNewProducts() {
+        List<Product> products = productRepository.findTopCreatedAt(PageRequest.of(0,8));
+        if (products.isEmpty()) {
+            throw new AppException(ErrorCode.PRODUCT_NOT_FOUND);
+        }
+        return products.stream()
+                .map(productMapper::toProductDTO)
+                .collect(Collectors.toList());
     }
     
     public Product create(CreateProductDTO productDTO) throws IOException{
@@ -94,45 +101,45 @@ public class ProductService {
         }
     }
     
-    public Product edit(CreateProductDTO productDTO, int id) throws IOException{
-        SubCategory subCategory = subCategoryService.findById(productDTO.getSubCategoryId());
-        
-        Optional<Product> opt = productRepository.findById(id);
-        
-        if (opt.isEmpty()) {
-            return null;
-        }
-        
-        Product product = opt.get();
-        product.setNameProduct(productDTO.getName());
-        product.setDescription(productDTO.getDescription());
-        product.setPrice(productDTO.getPrice());
-        product.setStatus(productDTO.isStatus());
-        product.setSize(productDTO.getSize());
-        product.setSubCategory(subCategory);
-        
-        if (productDTO.getFiles() != null) {
-            for (String image: product.getImageList()) {
-                boolean deleted = deleteImage(image);
-            }
-
-            List<String> imagePaths = new ArrayList<>();
-            for(MultipartFile file: productDTO.getFiles()){
-                String path = saveImage(file);
-                imagePaths.add(path);
-            }
-            product.setImage(String.join(",", imagePaths));
-        }
-        
-        return productRepository.save(product);
-    }
+//    public Product edit(CreateProductDTO productDTO, int id) throws IOException{
+//        SubCategory subCategory = subCategoryService.findById(productDTO.getSubCategoryId());
+//
+//        Optional<Product> opt = productRepository.findById(id);
+//
+//        if (opt.isEmpty()) {
+//            return null;
+//        }
+//
+//        Product product = opt.get();
+//        product.setNameProduct(productDTO.getName());
+//        product.setDescription(productDTO.getDescription());
+//        product.setPrice(productDTO.getPrice());
+//        product.setStatus(productDTO.isStatus());
+//        product.setSize(productDTO.getSize());
+//        product.setSubCategory(subCategory);
+//
+//        if (productDTO.getFiles() != null) {
+//            for (String image: product) {
+//                boolean deleted = deleteImage(image);
+//            }
+//
+//            List<String> imagePaths = new ArrayList<>();
+//            for(MultipartFile file: productDTO.getFiles()){
+//                String path = saveImage(file);
+//                imagePaths.add(path);
+//            }
+//            product.setImage(String.join(",", imagePaths));
+//        }
+//
+//        return productRepository.save(product);
+//    }
     
     private String saveImage(MultipartFile file) throws IOException {
         String fileName = System.currentTimeMillis() + "_" + file.getOriginalFilename();
-        String uploadDir = System.getProperty("user.dir") + "/src/main/resources/static/images/";
+        String uploadDir = System.getProperty("user.dir") + "/src/main/resources/static/images/product";
 
         file.transferTo(new java.io.File(uploadDir + "/" + fileName));
-        return "/images/" + fileName;
+        return "/images/product" + fileName;
     }
     
     private boolean deleteImage(String imagePath){
